# phd_code

./: README.md  pyproject.toml  requirements-old.txt
src/phd/: __init__.py  cupt_parser.py  dcupt.py  lambdacss.py  lcss_lex.py  lexicon.py  utils.py
src/phd/experimentations/: 14_02_23.ipynb  a.py  all_exp.ipynb  corpus_stats.ipynb  expe_liai.ipynb  lem_dep_css_lex.py  liai_exp.py  liai_lex_see_more_than_mtlb.py  liai_seen_scores_all.csv  liai_swap_scores_all.csv  liai_swaping.py  marimo_test.py  richness_cap_exp.py  stats.py
src/phd/liai/: __init__.py  core.py  liai.py  model.py  model_copy.py  prep.py  utils.py
src/phd/oa_indices/: __init__.py  common.py  diversity_indices.py  performance_indices.py
src/phd/scripts/: __init__.py  cupt_2_blind_cupt.py  extract_lem_dep_css_lex.py  generate_all_blind.py  generate_all_gold_dcupt.py  generate_dcupt.py  generate_gold_dcupt.py  generate_multi_dcupt.py  generate_richness_capped_lexicons.py  run_mtlb_pipeline.py
