[project]
name = "phd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam", email = "lion.adam.otman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "conllu>=6.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "marimo>=0.21.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]

[project.scripts]
phd = "phd:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
