[project]
name = "phd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam", email = "lion.adam.otman@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "conllu>=6.0.0",
    "ipykernel",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "marimo",
    "matplotlib",
    "pandas",
    "rich>=14.3.3",
    "scikit-learn",
    "scipy",
    "torch",
    "tqdm>=4.67.3",
    "transformers",
    "wandb>=0.25.1",
]

[tool.uv]
link-mode = "hardlink"

[project.scripts]
phd = "phd:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
