[project]
name = "phd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam", email = "lion.adam.otman@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "conllu",
    "huggingface-hub==0.11.1 ; python_version < '3.11'",
    "huggingface-hub          ; python_version >= '3.11'",
    "ipykernel>=6.0",
    "ipywidgets",
    "jinja2",
    "marimo",
    "matplotlib",
    "numpy==1.26 ; python_version < '3.11'",
    "numpy>=2.0  ; python_version >= '3.11'",
    "pandas==1.5.2 ; python_version < '3.11'",
    "pandas>=2.0   ; python_version >= '3.11'",
    "pytz",
    "requests",
    "rich",
    "scikit-learn",
    "scipy",
    "tqdm",
    "transformers==4.24.0 ; python_version < '3.11'",
    "transformers          ; python_version >= '3.11'",
    "urllib3",
    "wandb",
]

# torch is NOT in main dependencies because the wheel URL differs for cpu vs gpu
# and between Python versions (1.13 for py3.9, 2.6+ for py3.13).
# Install with:  uv sync --extra gpu   OR   uv sync --extra cpu
[project.optional-dependencies]
gpu = [
    "torch==1.13.0+cu117 ; python_version < '3.11'",
    "torch>=2.6.0        ; python_version >= '3.11'",
]
cpu = [
    "torch==1.13.0+cpu ; python_version < '3.11'",
    "torch>=2.6.0      ; python_version >= '3.11'",
]

[tool.uv]
link-mode = "hardlink"
conflicts = [
    [{ extra = "gpu" }, { extra = "cpu" }],
]


# torch wheels are only on the PyTorch index, never on PyPI.
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu117", extra = "gpu", marker = "python_version < '3.11'" },
    { index = "pytorch-cu124", extra = "gpu", marker = "python_version >= '3.11'" },
    { index = "pytorch-cpu",   extra = "cpu" },
]

[project.scripts]
phd = "phd:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
